blg438e/Deney0/C5515_Support_Files/C5515_Lib/dsplib_2.40.00/EXAMPLES/neg/t3.h
/* This is a test for neg: rand */
#define NX 16
#define FNAME "t3"
#define MAXERROR 10

DATA x[NX] ={
29499,
-17621,
7002,
-919,
25644,
17176,
-2853,
-31556,
21063,
-3624,
7564,
19132,
27643,
15611,
-21217,
-6180,
};

DATA rtest[NX] ={
-29500,
17620,
-7002,
919,
-25644,
-17177,
2853,
31555,
-21064,
3624,
-7565,
-19132,
-27644,
-15611,
21216,
6180,
};

DATA r[NX]; 
